# api-log-tracker

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  fly.toml  railway.json  render.yaml  tui
.github/workflows/: ci.yml  release.yml
my-terminal-ui/: package-lock.json  package.json
my-terminal-ui/source/: app.tsx  cli.tsx  csv-watcher.ts  rust-bridge.ts  types.ts
my-terminal-ui/source/components/: Analysis.tsx  Dashboard.tsx  Integration.tsx  LiveLogs.tsx  ServerControls.tsx  Tabs.tsx  theme.ts
my-terminal-ui/test/: analysis.test.tsx  app.test.tsx  dashboard.test.tsx  integration.test.tsx  live-logs.test.tsx  server-controls.test.tsx  tabs.test.tsx
src/: agent.rs  client.rs  daemon.rs  lib.rs  logger.rs  main.rs  middleware.rs  models.rs  provider.rs  webhook.rs
tests/: daemon_test.rs
