[package]
name = "api_log_tracker"
version = "0.1.2"
edition = "2021"
description = "API log tracker with multi-provider LLM anomaly analysis, HTTP daemon, and TUI dashboard"
license = "MIT"
repository = "https://github.com/Ayyankhan101/api-log-tracker"
homepage = "https://github.com/Ayyankhan101/api-log-tracker"
readme = "README.md"

[[bin]]
name = "api_log_tracker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
async-trait = "0.1"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
